2014-10-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (credentials_new, credentials_free): New functions.
	(exec_omp_post, request_handler): Refactor code to use
	credentials_new(), fix credentials memory leaks.

2014-10-01  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_bar_chart.js
	src/html/classic/js/gsa_bubble_chart.js
	src/html/classic/js/gsa_donut_chart.js
	src/html/classic/js/gsa_line_chart.js: Add HTML table export menu item.

	* src/html/classic/js/gsa_graphics_base.js (resource_type_name): Add
	allinfo case.
	(html_table_from_records): New function.

2014-10-01  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_bar_chart.js (generate)
	src/html/classic/js/gsa_bubble_chart.js (generate)
	src/html/classic/js/gsa_donut_chart.js (generate)
	src/html/classic/js/gsa_line_chart.js (generate): Dynamically generate
	CSV column names and make column selection fit the chart better.

2014-09-30  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_bubble_chart.js (generate): Change file names
	of exported CSV and SVG to "gsa_bubble_chart-[...]".

	* src/html/classic/js/gsa_donut_chart.js (generate): Change file name
	of exported CSV to "gsa_donut_chart-[...]".

	* src/html/classic/js/gsa_line_chart.js (generate): Change file name
	of exported CSV to "gsa_line_chart-[...]".

2014-09-30  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (gsa:escape-js): Add escaping for "<", ">"
	and "'". Use character code form for all escaped characters.

2014-09-30  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/gsa-style.css (.axis text): Split font styling so it
	does not override "font-style".

	* src/html/classic/js/gsa_graphics_base.js (field_name): New function.
	
	* src/html/classic/js/gsa_line_chart.js (LineChartGenerator): Enlarge
	top margin, add legend_elem variable.
	(generate): Add legend on top of chart. Make font of right y axis