@@ -1,3 +1,9 @@
+2014-10-02  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	* src/html/classic/js/gsa_graphics_base.js (html_table_from_records):
+	Make headline a table row, make table use full window width and remove
+	border around table.
+
 2014-10-01  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* src/gsad.c (credentials_new, credentials_free): New functions.
